Network Monitor spacing fix

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1197,8 +1197,8 @@ a.v_highlight_more {
 }
 
 .big-info {
-  padding-bottom: 23px;
-  padding-top: 23px;
+  padding-bottom: 24px;
+  padding-top: 0px;
 }
 
 .big-info p.small-title {
@@ -1220,8 +1220,8 @@ a.v_highlight_more {
 
 @media (max-width: 768px) {
   .big-info {
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding-bottom: 12px;
+    padding-top: 0px;
   }
 }
 
